# music_maker

./: .gitignore  AI_INSTRUCTIONS.md  ASYNC LOGGER SPECIFICATION.md  CMakeLists.txt  FULL PRODUCT EXECUTION CHECKLIST.md  GEMINI.md  HYBRID FRONTEND STRATEGY.md  INVARIANTS.md  MVP EXECUTION CHECKLIST.md  TECHNICAL_DESIGN.md  TOKEN ECONOMY & BUDGET.md  audio_settings.xml  feature_ROADMAP.md  project.json
Resources/: index.html
Source/: InternalSynth.h  Main.cpp  MainComponent.cpp  MainComponent.h  Mixer.h  ProjectModel.h  RealTimeLogger.h  SynthEngine.h  Track.h
